# agtrace

./: .gitignore  AGENTS.md  BUG_CANDIDATES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXECPLAN-sdk-cli-refactor.md  LICENSE-APACHE  LICENSE-MIT  OUTPUT.md  PROGRESS.md  README.md  SDK_API_DESIGN.md  V1_DEPENDENCY_ANALYSIS.md  cliff.toml  dist-workspace.toml  mise.toml  release.toml  tasks.toml
crates/agtrace-cli/: Cargo.toml
crates/agtrace-cli/src/: args.rs  commands.rs  config.rs  context.rs  display_model.rs  intervention.rs  lib.rs  main.rs  reactor.rs  session_loader.rs  token_limits.rs  token_usage.rs  types.rs
crates/agtrace-cli/src/args/: commands.rs  common.rs  enums.rs  hints.rs  mod.rs
crates/agtrace-cli/src/display_model/: doctor.rs  init.rs  mod.rs  provider.rs  session.rs
crates/agtrace-cli/src/handlers/: analyze.rs  context.rs  corpus_overview.rs  demo.rs  dev.rs  doctor_check.rs  doctor_inspect.rs  doctor_run.rs  export.rs  index.rs  init.rs  lab_analyze.rs  lab_export.rs  lab_grep.rs  lab_stats.rs  mcp.rs  mod.rs  pack.rs  project.rs  provider.rs  provider_schema.rs  providers.rs  schema.rs  serve.rs  session_dump.rs  session_list.rs  session_show.rs  validate.rs  view.rs  watch.rs  watch_console.rs  watch_tui.rs  watch_tui_v2.rs  worktree.rs
crates/agtrace-cli/src/mcp/: dto.rs  mod.rs  server.rs  tools.rs
crates/agtrace-cli/src/output/: compact.rs  mod.rs  pack_view.rs  session_display.rs  timeline.rs
crates/agtrace-cli/src/presentation/: mod.rs
crates/agtrace-cli/src/reactors/: mod.rs  safety_guard.rs  stall_detector.rs  token_usage_monitor.rs  tui_renderer.rs
crates/agtrace-cli/src/services/: file_metadata.rs  mod.rs  writer.rs
crates/agtrace-cli/src/streaming/: mod.rs  watcher.rs
crates/agtrace-cli/src/ui/: console.rs  mod.rs  models.rs  refresh.rs  traits.rs  tui.rs
crates/agtrace-cli/src/views/: doctor.rs  mod.rs  pack.rs
crates/agtrace-cli/tests/: cli_compatibility.rs  common.rs  debug_session_discovery.rs  empty_database_test.rs  fixtures.rs  help_snapshots.rs  index_test.rs  init_configuration.rs  init_error_handling_test.rs  init_refresh_test.rs  init_test.rs  integration_tests.rs  list_filtering.rs  mcp_snapshots.rs  multi_provider_test.rs  pack_test.rs  project_isolation.rs  project_isolation_test.rs  provider_filtering.rs  session_completeness_test.rs  session_list_test.rs  session_show_test.rs  testworld_example.rs  watch_command.rs  watch_test.rs
crates/agtrace-cli/tests/snapshots/: help_snapshots__doctor_check_help.snap  help_snapshots__doctor_help.snap  help_snapshots__doctor_inspect_help.snap  help_snapshots__doctor_run_help.snap  help_snapshots__doctor_run_help.snap.new  help_snapshots__index_help.snap  help_snapshots__index_rebuild_help.snap  help_snapshots__index_update_help.snap  help_snapshots__index_vacuum_help.snap  help_snapshots__init_help.snap  help_snapshots__lab_analyze_help.snap  help_snapshots__lab_export_help.snap  help_snapshots__lab_help.snap  help_snapshots__main_help.snap  help_snapshots__pack_help.snap  help_snapshots__project_help.snap  help_snapshots__project_list_help.snap  help_snapshots__provider_detect_help.snap  help_snapshots__provider_help.snap  help_snapshots__provider_list_help.snap  help_snapshots__provider_schema_help.snap  help_snapshots__provider_set_help.snap  help_snapshots__session_help.snap  help_snapshots__session_list_help.snap  help_snapshots__session_show_help.snap  mcp_snapshots__call_get_session_summary.snap  mcp_snapshots__call_get_session_turns.snap  mcp_snapshots__call_get_turns.snap  mcp_snapshots__call_list_sessions.snap  mcp_snapshots__call_list_turns.snap  mcp_snapshots__error_invalid_params.snap  mcp_snapshots__error_session_not_found.snap  mcp_snapshots__initialize.snap  mcp_snapshots__tools_list.snap
crates/agtrace-core/: Cargo.toml
crates/agtrace-core/src/: path.rs
crates/agtrace-core/tests/: path_tests.rs
crates/agtrace-debug/: Cargo.toml
crates/agtrace-debug/src/: main.rs
crates/agtrace-engine/: Cargo.toml
crates/agtrace-engine/src/: activity.rs  analysis.rs  assembler.rs  convert.rs  export.rs  lib.rs  session.rs  span.rs  span_v2.rs  state_updates.rs  summary.rs  token_usage.rs  turn.rs
crates/agtrace-engine/src/analysis/: digest.rs  lenses.rs  metrics.rs  mod.rs  packing.rs
crates/agtrace-engine/src/diagnostics/: mod.rs  validator.rs
crates/agtrace-engine/src/domain/: events.rs  mod.rs  model.rs  token.rs
crates/agtrace-engine/src/session/: assembler.rs  extensions.rs  mod.rs  stats.rs  step_builder.rs  summary.rs  turn_builder.rs  types.rs
crates/agtrace-engine/tests/: activity_snapshots.rs  assembler_snapshots.rs  dual_pipeline_comparison.rs  session.rs  span_snapshots.rs  span_v2_snapshots.rs  turn_snapshots.rs
crates/agtrace-engine/tests/fixtures/: claude_events.json  codex_events.json  gemini_events.json
crates/agtrace-index/: Cargo.toml
crates/agtrace-index/src/: db.rs  error.rs  lib.rs  mod.rs  records.rs  schema.rs  storage.rs
crates/agtrace-index/tests/: schema_migration.rs
crates/agtrace-providers/: Cargo.toml
crates/agtrace-providers/examples/: generate_engine_fixtures.rs
crates/agtrace-providers/src/: builder.rs  error.rs  legacy.rs  lib.rs  mod.rs  normalization.rs  registry.rs  token_limits.rs  tool_analyzer.rs  tool_spec.rs  traits.rs
crates/agtrace-providers/tests/: codex_subagent_linking_test.rs  facade_parity_test.rs  provider_snapshots.rs  scan_legacy_project_hash_test.rs  snippet_truncation_test.rs
crates/agtrace-runtime/: Cargo.toml
crates/agtrace-runtime/src/: config.rs  error.rs  init.rs  init_service.rs  lib.rs  reactor.rs  runtime.rs  session_repository.rs  token_limits.rs  token_usage_monitor.rs
crates/agtrace-runtime/tests/: providers_to_engine.rs
crates/agtrace-testing/: Cargo.toml
crates/agtrace-testing/src/: assertions.rs  fixtures.rs  lib.rs  process.rs  providers.rs  world.rs
crates/agtrace-types/: Cargo.toml
crates/agtrace-types/src/: error.rs  lib.rs  mod.rs  model_limits.rs  models.rs  session.rs  util.rs  v2.rs
crates/agtrace-types/tests/: utils_tests.rs
(+601 files in other folders)
