[workspace]
members = [
    "crates/agtrace-types",
    "crates/agtrace-providers",
    "crates/agtrace-index",
    "crates/agtrace-engine",
    "crates/agtrace-runtime",
    "crates/agtrace-cli",
    "crates/agtrace-debug",
]
default-members = ["crates/agtrace-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lanegrid/agtrace"

[workspace.dependencies]
# Internal crates
agtrace-types = { path = "crates/agtrace-types" }
agtrace-providers = { path = "crates/agtrace-providers" }
agtrace-index = { path = "crates/agtrace-index" }
agtrace-engine = { path = "crates/agtrace-engine" }
agtrace-runtime = { path = "crates/agtrace-runtime" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
uuid = { version = "1.19", features = ["serde", "v4"] }
regex = "1.12"

# CLI/Runtime dependencies
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
notify = "6.1"

# Additional dependencies
sha2 = "0.10"
dirs = "5.0"
rusqlite = { version = "0.30", features = ["bundled"] }
owo-colors = "4.2"
comfy-table = "7.2"
is-terminal = "0.4"
csv = "1.4"
once_cell = "1.21.3"
terminal_size = "0.4"
crossterm = "0.28"
ctrlc = "3.5"
ratatui = "0.29.0"

# Dev dependencies
insta = { version = "1.45", features = ["json"] }
tempfile = "3.24"
assert_cmd = "2.1"
predicates = "3.1"
filetime = "0.2"

# Platform-specific
libc = "0.2"
