[workspace]
members = [
    "crates/agtrace-types",
    "crates/agtrace-core",
    "crates/agtrace-providers",
    "crates/agtrace-index",
    "crates/agtrace-engine",
    "crates/agtrace-runtime",
    "crates/agtrace-sdk",
    "crates/agtrace-cli",
    "crates/agtrace-testing",
]
default-members = ["crates/agtrace-cli"]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lanegrid/agtrace"
description = "The local-first observability platform for AI agents (SDK & CLI)"
keywords = ["ai", "agent", "llm", "observability", "opentelemetry", "sdk"]

[workspace.dependencies]
# Internal crates
agtrace-types = { version = "0.5.3", path = "crates/agtrace-types" }
agtrace-core = { version = "0.5.3", path = "crates/agtrace-core" }
agtrace-providers = { version = "0.5.3", path = "crates/agtrace-providers" }
agtrace-index = { version = "0.5.3", path = "crates/agtrace-index" }
agtrace-engine = { version = "0.5.3", path = "crates/agtrace-engine" }
agtrace-runtime = { version = "0.5.3", path = "crates/agtrace-runtime" }
agtrace-sdk = { version = "0.5.3", path = "crates/agtrace-sdk" }
agtrace = { version = "0.5.3", path = "crates/agtrace-cli" }
agtrace-testing = { version = "0.5.3", path = "crates/agtrace-testing" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
uuid = { version = "1.19", features = ["serde", "v4"] }
regex = "1.12"

# CLI/Runtime dependencies
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
notify = "8.2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }
futures = "0.3"

# Additional dependencies
sha2 = "0.10"
dirs = "6.0"
rusqlite = { version = "0.38", features = ["bundled"] }
owo-colors = "4.2"
is-terminal = "0.4"
csv = "1.4"
once_cell = "1.21.3"
terminal_size = "0.4"
crossterm = "0.29"
ctrlc = "3.5"
ratatui = "0.29.0"

# Dev dependencies
insta = { version = "1.45", features = ["json", "redactions"] }
tempfile = "3.24"
assert_cmd = "2.1"
predicates = "3.1"
filetime = "0.2"

# Platform-specific
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
