[package]
name = "agtrace-cli"
version.workspace = true
edition.workspace = true
description = "Terminal UI and command-line interface for exploring AI agent execution traces"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/lanegrid/agtrace"

# cargo-dist config for npm publishing
[package.metadata.dist]
npm-package = "@lanegrid/agtrace"

[[bin]]
name = "agtrace"
path = "src/main.rs"

[dependencies]
agtrace-types.workspace = true
agtrace-providers.workspace = true
agtrace-index.workspace = true
agtrace-engine.workspace = true
agtrace-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
walkdir.workspace = true
owo-colors.workspace = true
is-terminal.workspace = true
csv.workspace = true
toml.workspace = true
notify.workspace = true
once_cell.workspace = true
terminal_size.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
ratatui.workspace = true
regex.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
uuid.workspace = true
filetime.workspace = true
