[package]
name = "agtrace"
version.workspace = true
edition.workspace = true
description = "The official CLI for agtrace, built on top of agtrace-sdk. Visualize and analyze AI agent execution traces."
license.workspace = true
repository.workspace = true
homepage = "https://github.com/lanegrid/agtrace"
categories = ["command-line-utilities", "development-tools::debugging", "visualization"]
keywords = ["ai", "agent", "llm", "trace", "tui"]
readme = "../../README.md"

# cargo-dist config for npm publishing
[package.metadata.dist]
npm-package = "@lanegrid/agtrace"

[[bin]]
name = "agtrace"
path = "src/main.rs"

[dependencies]
agtrace-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
walkdir.workspace = true
owo-colors.workspace = true
is-terminal.workspace = true
csv.workspace = true
toml.workspace = true
notify.workspace = true
once_cell.workspace = true
terminal_size.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
ratatui.workspace = true
regex.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
agtrace-testing.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
uuid.workspace = true
filetime.workspace = true
