[package]
name = "agtrace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal core infrastructure for the agtrace CLI. Not intended for direct use."

[dependencies]
agtrace-types.workspace = true
sha2.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
