[package]
name = "agtrace-debug"
version = "0.1.0"
edition = "2021"
authors = ["lanegrid team"]
description = "Debug tool for agtrace event streams"
license = "MIT OR Apache-2.0"

[[bin]]
name = "agtrace-debug"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
agtrace-runtime = { path = "../agtrace-runtime" }
agtrace-types = { path = "../agtrace-types" }
agtrace-providers = { path = "../agtrace-providers" }
agtrace-index = { path = "../agtrace-index" }
clap = { version = "4.5", features = ["derive"] }
