[package]
name = "agtrace-debug"
version.workspace = true
edition.workspace = true
description = "Debug tool for agtrace event streams"
license.workspace = true

[[bin]]
name = "agtrace-debug"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
agtrace-runtime.workspace = true
agtrace-types.workspace = true
agtrace-providers.workspace = true
agtrace-index.workspace = true
clap.workspace = true
