[package]
name = "agtrace-engine"
version.workspace = true
edition.workspace = true
description = "Session reconstruction and analysis engine - builds conversation timelines from raw events"
license.workspace = true

[dependencies]
agtrace-types.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
uuid.workspace = true

[dev-dependencies]
agtrace-providers.workspace = true
insta.workspace = true
