[package]
name = "agtrace-engine"
version.workspace = true
edition.workspace = true
description = "Session reconstruction and analysis engine - builds conversation timelines from raw events"
license.workspace = true
repository.workspace = true

[dependencies]
agtrace-types = { version = "0.1.0", path = "../agtrace-types" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
uuid.workspace = true

[dev-dependencies]
agtrace-providers = { version = "0.1.0", path = "../agtrace-providers" }
insta.workspace = true
