[package]
name = "agtrace-engine"
version.workspace = true
edition.workspace = true
description = "Internal core engine for the agtrace CLI. Not intended for direct use."
license.workspace = true
repository.workspace = true
keywords = ["agtrace-internal"]

[dependencies]
agtrace-types.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
uuid.workspace = true

[dev-dependencies]
agtrace-providers.workspace = true
insta.workspace = true
