[package]
name = "agtrace-index"
version.workspace = true
edition.workspace = true
description = "Lightweight SQLite metadata index - schema-on-read approach for zero-copy storage"
license.workspace = true
repository.workspace = true

[dependencies]
agtrace-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
