[package]
name = "agtrace-index"
version.workspace = true
edition.workspace = true
description = "Internal index database for the agtrace CLI. Not intended for direct use."
license.workspace = true
repository.workspace = true
keywords = ["agtrace-internal"]

[dependencies]
agtrace-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
