[package]
name = "agtrace-providers"
version.workspace = true
edition.workspace = true
description = "Log discovery and normalization adapters for AI agent providers"
license.workspace = true

[dependencies]
agtrace-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
walkdir.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v5"] }
regex.workspace = true

[dev-dependencies]
insta.workspace = true
