[package]
name = "agtrace-providers"
version.workspace = true
edition.workspace = true
description = "Internal provider adapters for the agtrace CLI. Not intended for direct use."
license.workspace = true
repository.workspace = true
keywords = ["agtrace-internal"]

[dependencies]
agtrace-types.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v5"] }
regex.workspace = true

[dev-dependencies]
insta.workspace = true
anyhow.workspace = true
