[package]
name = "agtrace-runtime"
version.workspace = true
edition.workspace = true
description = "Workspace orchestration and live session monitoring with file-watching reactors"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
notify.workspace = true
walkdir.workspace = true
agtrace-engine = { version = "0.1.0", path = "../agtrace-engine" }
agtrace-index = { version = "0.1.0", path = "../agtrace-index" }
agtrace-types = { version = "0.1.0", path = "../agtrace-types" }
agtrace-providers = { version = "0.1.0", path = "../agtrace-providers" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
