[package]
name = "agtrace-runtime"
version.workspace = true
edition.workspace = true
description = "Internal runtime orchestration for the agtrace CLI. Not intended for direct use."
license.workspace = true
repository.workspace = true
keywords = ["agtrace-internal"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
notify.workspace = true
walkdir.workspace = true
agtrace-engine.workspace = true
agtrace-index.workspace = true
agtrace-types.workspace = true
agtrace-providers.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
