[package]
name = "agtrace-testing"
version.workspace = true
edition.workspace = true
description = "Internal testing utilities for the agtrace CLI. Not intended for direct use."
license.workspace = true
repository.workspace = true
keywords = ["agtrace-internal"]

[dependencies]
# Internal crates
agtrace-types = { workspace = true }
agtrace-providers = { workspace = true }

# Common dependencies
anyhow = { workspace = true }
serde_json = { workspace = true }

# Testing infrastructure
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

# File operations
walkdir = { workspace = true }

# Hashing for sessionId generation
sha2 = { workspace = true }

[lib]
name = "agtrace_testing"
path = "src/lib.rs"
