[package]
name = "agtrace-types"
version.workspace = true
edition.workspace = true
description = "Core types for agtrace"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
