[package]
name = "agtrace-types"
version.workspace = true
edition.workspace = true
description = "Shared domain models and type-safe AgentEvent definitions for cross-provider compatibility"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
