[package]
name = "agtrace-types"
version.workspace = true
edition.workspace = true
description = "Internal core types for the agtrace CLI. Not intended for direct use."
license.workspace = true
repository.workspace = true
keywords = ["agtrace-internal"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
